uploaded test and skeleton code

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:wemos_d1_mini32]
+[env]
+monitor_speed = 115200
+
+[env:master]
 platform = espressif32
 board = wemos_d1_mini32
 framework = arduino
+build_src_filter = +<master.cpp>
+
+[env:slave]
+platform = espressif32
+board = wemos_d1_mini32
+framework = arduino
+build_src_filter = +<slave.cpp>
